--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,6 @@
-"""
-requirements.txt - Dependencies for the Stock Dashboard project
-
-This file lists all the Python packages required to run the application.
-"""
-
-# Core packages
-streamlit==1.28.1
-pandas==2.1.1
-numpy==1.25.2
-
-# Data sources
-yfinance==0.2.32
-
-# Visualization
-plotly==5.18.0
-
-# Date handling
-python-dateutil==2.8.2
+streamlit==1.31.0
+pandas==2.0.3
+numpy==1.24.3
+yfinance==0.2.33
+plotly==5.15.0
+matplotlib==3.7.2
